[package]
name = "rasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
colored = "2.1.0"
half = "2.4.1"
rainbow-wrapper = { git = "https://github.com/luminous-foundation/rainbow-wrapper" }